first version of complete website

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dance Portfolio</title>
+    <title>Michela Venturini</title>
     <meta name="description" content="Professional Dance Portfolio" />
-    <meta name="author" content="Dancer" />
+    <meta name="author" content="Riccardo Venturini" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap">
 
     <meta property="og:title" content="Michela Venturini" />
     <meta property="og:description" content="Professional Dance Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:image" content="https://michelaventurini.netlify.app/cover.png" />
+    <meta property="og:url" content="https://michelaventurini.netlify.app" />
+    <meta property="og:type" content="website" />
+    
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@riccardoventurini.dev" />
+    <meta name="twitter:image" content="https://michelaventurini.netlify.app/cover.png" />
   </head>
 
   <body>
