--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+            <input type="text"  name="name">
+            <input type="email" name="email">
+            <textarea name="message"></textarea>
+      </form>   
+    </div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
